# scraper

./: .env.example  .gitignore  README.md  config.yaml  config_aman_craft.yaml  prepare_ingestion.env.example  prepare_ingestion.py  pyproject.toml  railway.toml  requirements.txt  scraper.py  scraper_browserless.py  scraper_crawl4ai.py  scraper_playwright.py  upsert_pinecone.py
app/: README.md  __init__.py  main.py  models.py  pinecone_utils.py  pipeline_steps.py  procrastinate_jobs.py  procrastinate_status.py  run_manager.py
demo/: .env.example  README.md  app.py  chat_history.json  requirements.txt
ingestion_ready/: manifest.jsonl  skipped.jsonl  summary.json
ingestion_ready/fine_markdown/: 2025_iccas_org_02e3c15a8a.md  2025_iccas_org_072afe160a.md  2025_iccas_org_0b2bc73cab.md  2025_iccas_org_0d38b65c7c.md  2025_iccas_org_11fdd5312b.md  2025_iccas_org_1651df7570.md  2025_iccas_org_16adca59e4.md  2025_iccas_org_22e137c463.md  2025_iccas_org_252ace2a3d.md  2025_iccas_org_2a6abea6ed.md  2025_iccas_org_2d198e1d5a.md  2025_iccas_org_34dbe8aa51.md  2025_iccas_org_3da335518d.md  2025_iccas_org_3fd14d3182.md  2025_iccas_org_40626dacab.md  2025_iccas_org_43e55e63b5.md  2025_iccas_org_444afe6544.md  2025_iccas_org_50fcf99ae0.md  2025_iccas_org_5251dfb9af.md  (+363 more)
live/: README.md  __init__.py  settings.py
live/api/: __init__.py  (+1 more)
liveapp/: __init__.py  config.yaml  db.py  pipeline.py  run.py  schemas.py  scraper.py
obscuraapp/: __init__.py  api.py  config.yaml  pipeline.py  run.py  schemas.py  scraper.py
output1/: crawl_status.jsonl
output_scraper_2/: crawl_status.json
(+1430 files in other folders)
